# master_2025

./: .gitmodules  README.md  aes_c.patch  aes_h.patch  fixed_aes.patch  full_aes.patch
ML_SCA/: 00_tuning_prep.ipynb  01_tuning_RANDOM.ipynb  02_train_RANDOM.ipynb  02_train_RPA.ipynb  03.01_eval_RANDOM.ipynb  03.01_eval_RPA.ipynb  ASCAD_CPA_PoC.ipynb  ASCAD_SNR_processing.ipynb  ASCAD_utils.py  Attention_CNN.ipynb  Attention_CNN_v_synthetic.ipynb  CNN_Transformer_PoC.ipynb  CNN_architectures.ipynb  EstraClone.ipynb  EstraNet_PoC.ipynb  MLP_PoC.ipynb  SCA_utils.py  SNR_analysis.ipynb  TraceGenTinyAes.ipynb  Transformers_PoC.ipynb  Transformers_SCA.ipynb  ascad_exp_colab.ipynb  data_check_sanity.ipynb  data_inspector.ipynb  models.py
ML_SCA/_archived_notebooks/: 03_eval_RPA.ipynb  SCA_utils.ipynb  SNR_analysis.ipynb  Untitled  data_utils.ipynb  models.ipynb  tuning_utils.ipynb
ML_SCA/include/: data_utils.py  models.py  sca_utils.py  tuning_utils.py
PoC/: .gitignore  README.md  attack_CPA.py  check_bin.py  generate_rainbow_traces.py  mbedtls_masked_target.py  mbedtls_target.py  mbedtls_target_generator.py  requirements.txt  run_trace_generator.py  tinyaes_target.py
PoC/applications_aes_app/: CMakeLists.txt  prj.conf
PoC/rpa_attack_app/: CMakeLists.txt  Kconfig  README.md  inject-masks.conf  masked.conf  prj.conf
PoC/rpa_attack_app/src/: main.c
PoC/sca_trace_generator/: core_sca_generator.py  mbedtls_masked_target_generator.py  mbedtls_target_generator.py  (+2 more)
manifest-repo/: west.yml
thesis_src/: ML_SCA_master_thesis.tex  bibliografija.bib  prijava.tex
(+1 files in other folders)
